bug: navbar submit button did not have a screen reader readable label

--- a/ckanext/ontario_theme/fanstatic/ontario_theme.css
+++ b/ckanext/ontario_theme/fanstatic/ontario_theme.css
@@ -894,6 +894,7 @@ footer.site-footer .attribution .ckan-footer-logo {
 .toolbar .home span,
 .simple-input label,
 .simple-input button,
+.simple-input button span,
 a.skip-main {
   left: -999px;
   position: absolute;
